2012-07-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: added general trackingfile finder function.
	* dmbr_report_cell_expt.m: added general trackingfile finder function. improved Jeffrey plotting.

2012-07-11 Christian Stith <chstith@ncsu.edu>
	* dmbr_adjust_report.m: cleaned up GUI appearance.
	* dmbr_init.m: added fps functionality.
	* dmbr_multi_file_report.m: added plot selection gui & functionality. improved initial breakpoint setting algorithm.
	* dmbr_report_cell_expt.m: added Jeffrey plot model option. added plot selection functionality. improved plotting procedures.

2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: Fixed multi-directory analysis bug.
	* dmbr_adjust_report.m: "
	* dmbr_report_cell_expt.m: "

2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: fixed GUI filename bugs.
	* dmbr_adjust_report.m: fixed Excel sidebar printout bug.

2012-06-28 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report: added. allows for multiple files and directories to be run through dmbr_report_cell_expt, creating a single large report.
	* dmbr_adjust_report.m: added. allows for selection of individual sequences for inclusion in report.
	* dmbr_report_cell_expt.m: added comments. improved functionality and allowed for interaction with dmbr_multi_file_report and dmbr_adjust_report.

2012-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_plot_data.m: displacement plots now show a title with average displacement of last ten data points.

2012-06-13 Christian Stith <chstith@ncsu.edu>
	* dmbr_compute_compliance.m: adapted compliance calculation to approximate compliance for zero-force period
	* dmbr_report_cell_expt.m: added excel output functionality, corrected displacement output

2012-6-11 Christian Stith <chstith@ncsu.edu>
	* dmbr_relaxation_time.m: removed problematic whitespace
	* dmbr_run.m: reimplemented fit function, moved counter to correct position